src/objects/Outbound_Call_Setting__c.object
<CustomObject>
    <description>Configuration object for Outbound Calling</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active setting</description>
        <inlineHelpText>Define whether Setting is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_In_Tab__c</fullName>
        <description>These picklist values should match the api name of the tab</description>
        <inlineHelpText>These picklist values should match the api name of the tab</inlineHelpText>
        <label>Available In Tab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outbound_Calling_New</fullName>
                </value>
                <value>
                    <fullName>Balance_Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Field_Map__c</fullName>
        <description>Which fields of Case Should be updated with values from OC fields</description>
        <inlineHelpText>Which fields of Case Should be updated with values from OC fields : holds JSON String</inlineHelpText>
        <label>Case Field Map</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <description>Case record type label name. Settings are applied to all case records with specified record type</description>
        <inlineHelpText>Case record typelabel name. Settings are applied to all case records with specified record type</inlineHelpText>
        <label>Case Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Queue_Name__c</fullName>
        <description>Default queue name</description>
        <inlineHelpText>Define default queue name</inlineHelpText>
        <label>Default Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_Image_Resource_Name__c</fullName>
        <description>Defines the image name from static resources for menu.</description>
        <inlineHelpText>Defines the image name from static resources for menu.</inlineHelpText>
        <label>Icon Image Resource Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Menu_Name__c</fullName>
        <description>Menu name</description>
        <inlineHelpText>Define menu name of the call</inlineHelpText>
        <label>Menu Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order number</description>
        <inlineHelpText>Define in what order the outbound calling items are shown on the Outbound Calling page</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <description>Setting parameters in json format</description>
        <inlineHelpText>Define Setting parameters in json format</inlineHelpText>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reports__c</fullName>
        <label>Reports</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visualforce_Page__c</fullName>
        <description>Visualforce Page name</description>
        <inlineHelpText>Define the Visualforce page that serves the functionality</inlineHelpText>
        <label>Visualforce Page</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Outbound Call Setting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Menu_Name__c</columns>
        <columns>Order__c</columns>
        <columns>Visualforce_Page__c</columns>
        <columns>Default_Queue_Name__c</columns>
        <columns>Icon_Image_Resource_Name__c</columns>
        <columns>Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Outbound Call Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Call Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>